--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.18)
 set(CMAKE_CXX_FLAGS "-march=native -O3 -g")
 project(tangor CXX)
 set(CMAKE_CXX_STANDARD 20)
+option(USE_HOGE "Use HOGE for 2-input gates" OFF)
 OPTION(USE_M12 "Use M_12 encoded message space" OFF) 
+
+if(USE_HOGE)
+    add_compile_definitions(USE_HOGE)
+endif()
 
 # if(USE_M12)
 # 	add_compile_definitions(USE_M12)
