Added HOGE support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ OPTION(USE_M12 "Use M_12 encoded message space" OFF)
 
 if(USE_HOGE)
     add_compile_definitions(USE_HOGE)
+    add_compile_definitions(STARPU_USE_OPENCL)
+    add_subdirectory(thirdparties/xcl2)
 endif()
 
 # if(USE_M12)
